@@ -1119,7 +1119,7 @@
                    wallclock_time, exit_status
             FROM 
                 sge_job u1
-                LEFT OUTER JOIN
+                INNER JOIN
                 (SELECT j_id,
                         MIN(ju_start_time) AS start_time,
                         MAX(ju_end_time) AS end_time,
